--- a/index.html
+++ b/index.html
@@ -9,8 +9,29 @@
 </head>
 
 <body id="top" class="smooth-scroll m-0 bg-clc-gray">
+    <!-- popup notice-->
+    <div 
+    x-data="{ open: true }"
+    x-show="open"
+    class="static grid top-0 left-0 h-screen w-screen bg-clc-green z-50">
+        <div class="grid grid-cols-1 place-self-center h-auto -mt-20">
+            <div class="bg-white m-16 md:m-0">
+                <img src="/assets/pic9.jpg" class="object-cover md:h-full md:float-left md:w-56 md:mr-16">
+                <div class="px-8 py-8 md:px-16 md:py-12 max-w-2xl">
+                    <h2 class="text-clc-green uppercase text-2xl mb-4">(Very) Early Access...</h2> 
+                    <p>Alpha does not represent quality of final product. Thank you for your understanding.</p>
+                </div>
+            </div>
+            <div 
+            x-on:click="open = ! open"
+            class="col-span-2 text-white lg:p-4 text-center text-3xl cursor-pointer">
+                X
+            </div>
+        </div>
+    </div>
+    <!-- core switcher-->
     <section class="relative" x-data="{width: 'w-[640px] min-w-[640px]'}">    
-    <div class="sticky top-0 bg-clc-gray w-full my-0 flex place-content-center gap-0 z-50 px-4">
+    <div class="sticky top-0 bg-clc-gray w-full my-0 flex place-content-center gap-0 z-40 px-4">
         <img src="/assets/CLC_Logo_Xsmall_White.svg" class="w-36 h-auto mr-20 cursor-pointer" x-on:click="document.getElementById('components').contentWindow.scrollTo({top: 0, behavior: 'smooth'})">
         <button id="default" title="sm"
         @click="width = 'w-[640px] min-w-[640px]'"
